@@ -1,5 +1,6 @@
 Version 2.00.32 - 
 ====================================
+  Ignore sysfs symlinks when DT_UNKNOWN.
   Add clvmd init script for RHEL4.
   Skip devices that are too small to be PVs.
   Fix pvchange -x segfault with lvm2-format orphan.
